# lib-vulkan

./: Cargo.toml  build.rs
.cargo/: config.toml
loader/: Cargo.toml
loader/src/: driver.rs  lib.rs
loader/src/windows/: driver.rs  error.rs  mod.rs
loader/src/windows/manifest/: file_format_version.rs  icd.rs  library_arch.rs  mod.rs
loader/src/windows/paths/: mod.rs  software.rs  system.rs
loader/src/windows/paths/key/: child_iter.rs  mod.rs  value_iter.rs
loader/tests/: load.rs
loaders/native/: Cargo.toml
loaders/native/src/: lib.rs  windows.rs
src/: cstring_util.rs  device.rs  fence.rs  image.rs  image_view.rs  instance.rs  lib.rs  macros.rs  physical_device.rs  queue.rs  semaphore.rs  surface.rs  swapchain.rs  vulkan.rs
src/bindings/: mod.rs
src/common/: extension_properties.rs  layer_properties.rs  mod.rs  structure_type.rs
src/constants/: layer_sizes.rs  mod.rs
src/core/: mod.rs
src/device/: functions.rs  mod.rs  queue_create_info.rs
src/enumerations/: mod.rs  result.rs  structure_type.rs  system_allocation_scope.rs
src/ext_debug_utils/: mod.rs
src/extensions/: mod.rs
src/functions/: enumerate_instance_extensions_properties.rs  enumerate_instance_layer_properties.rs  enumerate_instance_version.rs  get_instance_proc_addr.rs  mod.rs
src/instance/: application_info.rs  create_info.rs  functions.rs  mod.rs
src/khr_surface/: mod.rs
src/khr_swapchain/: mod.rs
src/khr_win32_surface/: mod.rs
src/loader/: driver.rs  mod.rs
src/macros/: api_version_major.rs  api_version_minor.rs  api_version_variant.rs  define_handle.rs  mod.rs  (+4 more)
tests/: enumerate_layers.rs  get_instance_proc_addr.rs  load.rs  loader.rs
vulkan/: Cargo.toml
vulkan/src/: device.rs  instance.rs  lib.rs  macros.rs  physical_device.rs  queue.rs  surface.rs  vulkan.rs
vulkan/src/bindings/: constants.rs  mod.rs  types.rs
vulkan/src/bindings/core/: types.rs
vulkan/src/bindings/core/enums/: mod.rs
vulkan/src/bindings/core/functions/: physical_device.rs
vulkan/src/bindings/core/structures/: instance_create_info.rs  mod.rs  physical_device_features.rs  queue_flags.rs
vulkan/src/bindings/enums/: mod.rs  physical_device_type.rs  queue_global_priority_khr.rs  result.rs  structure_type.rs
vulkan/src/bindings/extensions/: mod.rs
vulkan/src/bindings/extensions/global_priority/: device_queue_global_priority_create_info_khr.rs  mod.rs
vulkan/src/bindings/extensions/surface/: color_space.rs  present_mode.rs  surface_capabilities.rs  surface_format.rs  surface_transform_flags.rs
vulkan/src/bindings/functions/: device.rs  global.rs  instance.rs  mod.rs  physical_device.rs
vulkan/src/bindings/structures/: application_info.rs  device_create_info.rs  device_queue_create_flags.rs  device_queue_create_info.rs  extension_properties.rs  extent_3d.rs  instance_create_flags.rs  instance_create_info.rs  layer_properties.rs  mod.rs  physical_device_features.rs  physical_device_properties.rs  physical_device_sparse_properties.rs
vulkan/tests/: enumerate_layers.rs  triangle.rs
(+473 files in other folders)
