[package]
name = "vulkan"
version = "0.0.0"
description = "Vulkan raw bindings"
authors = ["Lance Hart <me@lancehart.ca>"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/shipsimfan/lib-vulkan"
publish = false

[target.'cfg(windows)'.dependencies]
win32.git = "https://github.com/shipsimfan/lib-win32"
