[workspace]
default-members = ["."]

[workspace.package]
authors = ["Lance Hart <me@lancehart.ca>"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/shipsimfan/lib-vulkan"
publish = false

[package]
name = "vulkan"
description = "Vulkan raw bindings"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
vulkan-loader.path = "loader"
