[package]
name = "vulkan-loader"
description = "Cross-platform loader of vulkan drivers"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
json = { git = "https://github.com/shipsimfan/lib-json", branch = "lib-data-format" }

[target.'cfg(windows)'.dependencies]
win32.git = "https://github.com/shipsimfan/lib-win32"
