[package]
name = "vulkan"
version = "0.1.0"
description = "Vulkan wrapper library"

authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
default = ["native_loader"]

native_loader = ["dep:native"]

[dependencies]
loader = { workspace = true }

native = { workspace = true, optional = true }
