[package]
name = "native"
version = "0.1.0"
description = "Binder to the system native vulkan library"

authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
loader = { workspace = true }

[target.'cfg(windows)'.dependencies]
win32 = { git = "https://github.com/shipsimfan/lib-win32", branch = "com_ptr" }
